# hire-me-pls

./: README.md  compose.yaml  example.env
backend/: Dockerfile  database.py  main.py  pyproject.toml
backend/auth/: models.py  services.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 2aab0ef3b0ac_initialize_database_create_users.py
frontend/: package-lock.json
frontend/src/: app.tsx
